# mcp-context-forge

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .htmlhintrc  .nvim.lua  .pre-commit-config.yaml  .pre-commit-lite.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Containerfile.lite  DEVELOPING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  TESTING.md  add_server.txt  compose.upgrade.yml  debug_team_dropdown.md  docker-compose.yml  enable_payload_logging.md  gunicorn.config.py  main_test.py  main_test_bash.py  mcp-catalog.yml  migration_add_annotations.py  package.json  playwright.config.py  pyproject.toml  run-gunicorn.sh  run_mutmut.py  smoketest.py  test_sre.py
.github/: pull_request_template.md
alembic/: env.py
charts/: README.md
deployment/: CHARTS.md
docs/: config.schema.json  requirements.txt
llms/: mcp-server-python.md  plugins-llms.md
mcp-servers/python/chunker_server/: Makefile  README.md  pyproject.toml
mcp-servers/python/chunker_server/src/chunker_server/: __init__.py  server.py  server_fastmcp.py
mcp-servers/python/chunker_server/tests/: test_server.py
mcp-servers/python/code_splitter_server/: Makefile  README.md  pyproject.toml
mcp-servers/python/code_splitter_server/src/code_splitter_server/: __init__.py  server.py  server_fastmcp.py
mcp-servers/python/code_splitter_server/tests/: test_server.py
mcp-servers/python/csv_pandas_chat_server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/csv_pandas_chat_server/src/csv_pandas_chat_server/: __init__.py  server.py  server_fastmcp.py
mcp-servers/python/csv_pandas_chat_server/tests/: test_server.py
mcp-servers/python/docx_server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/docx_server/src/docx_server/: __init__.py  server.py  server_fastmcp.py
mcp-servers/python/docx_server/tests/: test_server.py
mcp-servers/python/graphviz_server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/graphviz_server/src/graphviz_server/: __init__.py  server.py  server_fastmcp.py
mcp-servers/python/graphviz_server/tests/: test_server.py
mcp-servers/python/libreoffice_server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/libreoffice_server/src/libreoffice_server/: __init__.py  server.py  server_fastmcp.py
mcp-servers/python/libreoffice_server/tests/: test_server.py
mcp-servers/python/mcp-rss-search/: Containerfile  Makefile  README.md  pyproject.toml  test_live.sh
mcp-servers/python/mcp-rss-search/src/mcp_rss_search/: __init__.py  server_fastmcp.py
mcp-servers/python/mcp-rss-search/tests/: test_server.py
mcp-servers/python/mermaid_server/: Makefile  README.md  pyproject.toml
mcp-servers/python/mermaid_server/src/mermaid_server/: __init__.py  server.py  server_fastmcp.py
mcp-servers/python/mermaid_server/tests/: test_server.py
mcp-servers/python/output_schema_test_server/: CURL_TESTING.md  Makefile  QUICK_START.md  README.md  TESTING.md  pyproject.toml  test-quick.sh
mcp-servers/python/output_schema_test_server/src/output_schema_test_server/: __init__.py  server_fastmcp.py
mcp-servers/python/plotly_server/: Makefile  README.md  pyproject.toml
mcp-servers/python/plotly_server/src/plotly_server/: __init__.py  server.py  server_fastmcp.py
mcp-servers/python/plotly_server/tests/: test_server.py
mcp-servers/python/pm_mcp_server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/pm_mcp_server/src/pm_mcp_server/: __init__.py  resource_store.py  schemata.py  server_fastmcp.py
mcp-servers/python/pm_mcp_server/src/pm_mcp_server/data/: __init__.py
mcp-servers/python/pm_mcp_server/src/pm_mcp_server/data/sample_data/: __init__.py  sample_schedule.json
mcp-servers/python/pm_mcp_server/src/pm_mcp_server/data/templates/: __init__.py  raid_log.csv  status_report.md.j2
mcp-servers/python/pm_mcp_server/src/pm_mcp_server/prompts/: __init__.py  change_impact_prompt.md  risk_mitigation_prompt.md  status_report_prompt.md
mcp-servers/python/pm_mcp_server/src/pm_mcp_server/services/: __init__.py  diagram.py
mcp-servers/python/pm_mcp_server/src/pm_mcp_server/tools/: __init__.py  collaboration.py  governance.py  planning.py  reporting.py
mcp-servers/python/pm_mcp_server/tests/: conftest.py
mcp-servers/python/pm_mcp_server/tests/unit/tools/: test_collaboration.py  test_governance.py  test_planning.py  test_reporting.py
mcp-servers/python/python_sandbox_server/: .env.example  Containerfile  Makefile  README.md  pyproject.toml  test_request.json
mcp-servers/python/python_sandbox_server/docker/: Dockerfile.sandbox  build-sandbox.sh
mcp-servers/python/python_sandbox_server/src/python_sandbox_server/: __init__.py  server.py  server_fastmcp.py
mcp-servers/python/python_sandbox_server/tests/: test_server.py
mcp-servers/python/synthetic_data_server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/synthetic_data_server/src/synthetic_data_server/: __init__.py  generators.py  schemas.py  server_fastmcp.py  storage.py
mcp-servers/python/synthetic_data_server/tests/: test_generator.py
mcp-servers/python/url_to_markdown_server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/url_to_markdown_server/src/url_to_markdown_server/: __init__.py  server.py  server_fastmcp.py
mcp-servers/python/url_to_markdown_server/tests/: test_server.py
mcpgateway/: __init__.py  admin.py  auth.py  bootstrap_db.py  cli.py  config.py  db.py  main.py  models.py  observability.py  reverse_proxy.py  schemas.py  translate.py  (+3 more)
plugins_rust/: .gitignore  Cargo.toml  Makefile  QUICKSTART.md  README.md  pyproject.toml
plugins_rust/benches/: pii_filter.rs
plugins_rust/benchmarks/: README.md  compare_pii_filter.py
plugins_rust/benchmarks/docs/: latest-results.md  quick-reference.md
plugins_rust/docs/: build-and-test.md  implementation-guide.md
plugins_rust/src/: lib.rs
plugins_rust/src/pii_filter/: config.rs  detector.rs  masking.rs  mod.rs  patterns.rs
plugins_rust/tests/: integration.rs
(+1036 files in other folders)
