[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mcpgateway-rust"
version = "0.9.0"
description = "Rust-accelerated plugins for MCP Gateway"
authors = [{name = "MCP Gateway Contributors"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
module-name = "plugins_rust"
features = ["pyo3/extension-module"]
