[project]
name = "csv-pandas-chat-server"
version = "2.0.0"
description = "Secure Python MCP server for CSV data analysis using natural language queries and AI code generation"
authors = [
  { name = "Mihai Criveti", email = "noreply@example.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp==2.11.3",
  "pydantic>=2.5.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "requests>=2.28.0",
  "openai>=1.0.0",
  "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "ruff>=0.0.290",
  "openpyxl>=3.1.0",  # For Excel file support
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csv_pandas_chat_server"]

[project.scripts]
csv-pandas-chat-server = "csv_pandas_chat_server.server_fastmcp:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "B", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=csv_pandas_chat_server --cov-report=term-missing"
