[project]
name = "mcp-rss-search"
version = "1.0.0"
description = "MCP server for advanced RSS feed parsing, searching, and analysis"
authors = [
  { name = "MCP Context Forge", email = "noreply@example.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp==2.11.3",
  "pydantic>=2.5.0",
  "feedparser>=6.0.0",
  "httpx>=0.27.0",
  "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
similarity = [
  "sentence-transformers>=2.2.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "rank-bm25>=0.2.2",
]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "pytest-httpx>=0.30.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "ruff>=0.0.290",
]
full = [
  "sentence-transformers>=2.2.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "pytest-httpx>=0.30.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "ruff>=0.0.290",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_rss_search"]

[project.scripts]
mcp-rss-search = "mcp_rss_search.server_fastmcp:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "B", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=mcp_rss_search --cov-report=term-missing"
